# chatgpt_cli

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LEGAL.txt  LICENSE  README  README.md  ai_client.cpp  ai_client.h  chat_client.cpp  chat_client.h  chatgpt_client.cpp  chatgpt_client.h  chatgptapp.h  main.cpp  openai_client.cpp  openai_client.h  openai_image.cpp  openai_image.h  utils.cpp  utils.h
.cache/clangd/index/: access.hpp.715D5B1D7824DEF1.idx  base64.hpp.F141898CE153C56F.idx  base64_rfc4648.hpp.4D546F6951351140.idx  chat_client.cpp.402361346C09FA7E.idx  chat_client.h.DE878C79C3020B56.idx  codec.hpp.985AC6947695A8D9.idx  config.hpp.18FA71C94557968E.idx  main.cpp.473D6DF54A87D897.idx  openai_client.cpp.B9B9CA934A03376A.idx  openai_client.h.DF351196E6ABE7DF.idx  openai_image.cpp.BDB56DFBD06F0D2E.idx  openai_image.h.7DFEC475F2287004.idx  parse_error.hpp.30DCF063CF9750EA.idx  raw_result_buffer.hpp.083EDE42FF5452AC.idx  stream_codec.hpp.477A9BC27441264D.idx  utils.cpp.CFF373BC7CDDBC22.idx  utils.h.AAC0E69492977AE4.idx
cmake/: FindEditLine.cmake
docs/: architecture.md  built-ins.md  clanker-overview.md  command-language-legacy.md  command-language.md  current-implementation-status.md  execution-model.md  grammar.txt  markdown-file-structure.txt  proposed-directory-structure.txt  security-model.md  status.md
docs/normative/: execution-model.md  expansion-model.md  grammar.ebnf
src/: chat_client.cpp  chat_client.h  main.cpp  openai_client.cpp  openai_client.h  openai_image.cpp  openai_image.h  utils.cpp  utils.h
src/clanker/: ast.h  builtin_core.cpp  builtin_llm.cpp  builtins.cpp  builtins.h  exec_policy.h  exec_policy_default.h  executor.cpp  executor.h  history.cpp  history.h  lexer.cpp  lexer.h  line_editor.cpp  line_editor.h  parser.cpp  parser.h  process.cpp  process.h  security_policy.h  shell.cpp  shell.h  signals.cpp  signals.h  unique_fd.h  util.cpp  util.h  value.h
src/clanker_llm/: backend_stub.cpp  backend_stub.h  model.h  redact.cpp  redact.h  registry.cpp  registry.h
src/obsolete/: chat_client.cpp  openai_client.cpp  openai_image.h  utils.h
src/tests/: test_main.cpp
